--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,15 @@ defaults:
   values:
     Image: ''
     Short Description: ''
+    layout: "page"
 email: your-email@example.com
 description: 'Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for Google search
   results) and in your feed.xml site description.
 
 '
-baseurl: 
-url: 
+baseurl:
+url:
 twitter_username: jekyllrb
 github_username: jekyll
 markdown: kramdown
